hphp/test/slow/php7_backported/scalar-types/scalar_reserved4.php.expectf

Fatal error: Cannot use `string` as a type name as it is reserved in %s/scalar_reserved4.php on line 3
